# gd32c2x1-demo-suites-cmake-vscode

./: README.md
Drivers/BSP/GD32C231C_EVAL/: gd32c231c_eval.c  gd32c231c_eval.h
Drivers/BSP/GD32C231F_START/: gd32c231f_start.c  gd32c231f_start.h
Drivers/BSP/GD32C231G_START/: gd32c231g_start.c  gd32c231g_start.h
Drivers/BSP/GD32C231K_START/: gd32c231k_start.c  gd32c231k_start.h
Drivers/GD32C2x1_standard_peripheral/Include/: gd32c2x1_adc.h  gd32c2x1_cmp.h  gd32c2x1_crc.h  gd32c2x1_dbg.h  gd32c2x1_dma.h  gd32c2x1_exti.h  gd32c2x1_fmc.h  gd32c2x1_fwdgt.h  gd32c2x1_gpio.h  gd32c2x1_i2c.h  gd32c2x1_misc.h  gd32c2x1_pmu.h  gd32c2x1_rcu.h  gd32c2x1_rtc.h  gd32c2x1_spi.h  gd32c2x1_syscfg.h  gd32c2x1_timer.h  gd32c2x1_usart.h  gd32c2x1_wwdgt.h
Drivers/GD32C2x1_standard_peripheral/Source/: gd32c2x1_adc.c  gd32c2x1_cmp.c  gd32c2x1_crc.c  gd32c2x1_dbg.c  gd32c2x1_dma.c  gd32c2x1_exti.c  gd32c2x1_fmc.c  gd32c2x1_fwdgt.c  gd32c2x1_gpio.c  gd32c2x1_i2c.c  gd32c2x1_misc.c  gd32c2x1_pmu.c  gd32c2x1_rcu.c  gd32c2x1_rtc.c  gd32c2x1_spi.c  gd32c2x1_syscfg.c  gd32c2x1_timer.c  gd32c2x1_usart.c  gd32c2x1_wwdgt.c
Projects/GD32C231C_EVAL/01_GPIO_Running_LED/Application/: readme.txt
Projects/GD32C231C_EVAL/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32C231C_EVAL/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32C231C_EVAL/04_USART_Printf/Application/: readme.txt
Projects/GD32C231C_EVAL/05_USART_HyperTerminal_Interrupt/: GD32C231.svd
Projects/GD32C231C_EVAL/05_USART_HyperTerminal_Interrupt/Application/: readme.txt
Projects/GD32C231C_EVAL/06_USART_DMA/: gd32c2x1_flash.ld
Projects/GD32C231C_EVAL/06_USART_DMA/Application/: readme.txt
Projects/GD32C231C_EVAL/07_ADC_Temperature_Vrefint/Application/: readme.txt
Projects/GD32C231C_EVAL/07_ADC_Temperature_Vrefint/Drivers/BSP/GD32C231C_EVAL/: CMakeLists.txt
Projects/GD32C231C_EVAL/08_Comparator_obtain_brightness/: CMakeLists.txt
Projects/GD32C231C_EVAL/08_Comparator_obtain_brightness/Application/: CMakeLists.txt  readme.txt
Projects/GD32C231C_EVAL/09_I2C_EEPROM/Application/: CMakeLists.txt  readme.txt
Projects/GD32C231C_EVAL/10_SPI_SPI_FLASH/Application/: CMakeLists.txt  readme.txt
Projects/GD32C231C_EVAL/11_I2S_Audio_Player/Application/: CMakeLists.txt  readme.txt
Projects/GD32C231C_EVAL/12_RCU_Clock_Out/Application/: CMakeLists.txt  readme.txt
Projects/GD32C231C_EVAL/13_PMU_Sleep_Wakeup/Application/: readme.txt
Projects/GD32C231C_EVAL/13_PMU_Sleep_Wakeup/cmake/: project.cmake
Projects/GD32C231C_EVAL/14_RTC_Calendar/Application/: readme.txt
Projects/GD32C231C_EVAL/15_TIMER_Breath_LED/Application/: readme.txt
Projects/GD32C231C_EVAL/16_SPI_LCD/Application/: CMakeLists.txt  readme.txt
Projects/GD32C231F_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32C231F_START/01_GPIO_Running_LED/Application/: CMakeLists.txt  readme.txt
Projects/GD32C231F_START/01_GPIO_Running_LED/Drivers/BSP/GD32C231F_START/: CMakeLists.txt
Projects/GD32C231F_START/02_GPIO_Key_Polling_mode/Application/: readme.txt
Projects/GD32C231F_START/03_EXTI_Key_Interrupt_mode/Application/: readme.txt
Projects/GD32C231G_START/01_GPIO_Running_LED/Drivers/BSP/GD32C231G_START/: CMakeLists.txt
Projects/GD32C231G_START/02_GPIO_Key_Polling_mode/: CMakeLists.txt
Projects/GD32C231K_START/01_GPIO_Running_LED/: CMakeLists.txt
Projects/GD32C231K_START/03_EXTI_Key_Interrupt_mode/Drivers/GD32C2x1_standard_peripheral/: CMakeLists.txt
Projects/GD32C231K_START/04_USART_HyperTerminal_Interrupt/Drivers/BSP/GD32C231K_START/: CMakeLists.txt
(+104 files in other folders)
